--- a/TOUR/src/main/webapp/myPage/mypage-css/mypage.css
+++ b/TOUR/src/main/webapp/myPage/mypage-css/mypage.css
@@ -1,11 +1,24 @@
 @charset "EUC-KR";
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
 
 header{
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('3.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('3\ \(1\).jpg');
     height: 100vh;
     background-size: cover;
     background-position: center;
 }
+
+h1{
+	font-family: 'Bagel Fat One',sans-serif;
+	color: #ee9ca7;
+	font-size: 100px;
+	
+	text-shadow: 5px 5px 20px #ee9ca7;
+}
+
+
+
+
 
 .total {
     position: absolute;
@@ -30,3 +43,7 @@ header{
 .sad{
     margin-left: 10%;
 }
+
+
+
+
