--- a/TOUR/src/main/webapp/signIn/signIn.css
+++ b/TOUR/src/main/webapp/signIn/signIn.css
@@ -1,3 +1,23 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap');
+
+header{
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('3.jpg');
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+* {
+	padding:0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+
+
+
+
 body {
     display: flex;
     align-items: center;
@@ -7,6 +27,9 @@ body {
     
     
 }
+
+
+
 
 h1{
 
